# ai-agent-car-listings

./: .gitignore  README.md  main.py  pyproject.toml
backend/: agent.py  api.py  main.py  main1.py  memory.py
data/: Copy of sample_cars_dataset.xlsx  processed_inventory.pkl
frontend/: app.py  app1.py
scripts/: preprocess_inventory.py  preprocess_inventory_llm.py
